force-app/main/default/objects/Activity/fields/RW_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_RM_Name__c</fullName>
    <label>Del RM Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>Aditi Dubey</fullName>
            </value>
            <value>
                <fullName>Akanksha Mukhiya</fullName>
            </value>
            <value>
                <fullName>Akshay Kadoo</fullName>
            </value>
            <value>
                <fullName>Altamash Hawaldar</fullName>
            </value>
            <value>
                <fullName>Amir khan</fullName>
            </value>
            <value>
                <fullName>Amrita Dhall</fullName>
            </value>
            <value>
                <fullName>Amrita Parui</fullName>
            </value>
            <value>
                <fullName>Anarock Team</fullName>
            </value>
            <value>
                <fullName>Aniruddha kulkarni</fullName>
                <label>Aniruddha Kulkarni</label>
            </value>
            <value>
                <fullName>Anjali chiplunkar</fullName>
            </value>
            <value>
                <fullName>Anshul Bajpai</fullName>
            </value>
            <value>
                <fullName>Arti Dhulekar</fullName>
            </value>
            <value>
                <fullName>Arvind Choudhary</fullName>
            </value>
            <value>
                <fullName>Ashish Dewale</fullName>
            </value>
            <value>
                <fullName>Babita Kapoor</fullName>
            </value>
            <value>
                <fullName>Bhageshwari Dhanwani</fullName>
            </value>
            <value>
                <fullName>Chaitali Sawant</fullName>
            </value>
            <value>
                <fullName>Chandrashekharan G</fullName>
            </value>
            <value>
                <fullName>Chetan Pathare</fullName>
            </value>
            <value>
                <fullName>Dashmi Shelar</fullName>
            </value>
            <value>
                <fullName>Deepa Pujari</fullName>
            </value>
            <value>
                <fullName>Divya Motwani</fullName>
            </value>
            <value>
                <fullName>Dolly Dedhiya</fullName>
            </value>
            <value>
                <fullName>Durga Kukreja</fullName>
            </value>
            <value>
                <fullName>Falguni Shah</fullName>
            </value>
            <value>
                <fullName>Garima Sahu</fullName>
            </value>
            <value>
                <fullName>Garima Singh</fullName>
            </value>
            <value>
                <fullName>Gaurav Pandey</fullName>
            </value>
            <value>
                <fullName>Girish More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>