force-app/main/default/objects/Activity/fields/RW_Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>RW_Sales_Associate__c</fullName>
    <label>Del Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Aakash Rajesh Tripathi</fullName>
            </value>
            <value>
                <fullName>A Aantra Saini</fullName>
            </value>
            <value>
                <fullName>A Aayush Kumar</fullName>
            </value>
            <value>
                <fullName>A Aayush Solanki</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Gaikwad</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Maskar</fullName>
            </value>
            <value>
                <fullName>A Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Abhishek Arora</fullName>
            </value>
            <value>
                <fullName>A Abhishek Dani</fullName>
            </value>
            <value>
                <fullName>A Abhishek Jain</fullName>
            </value>
            <value>
                <fullName>A Abin John</fullName>
            </value>
            <value>
                <fullName>A Adarsh Padney</fullName>
            </value>
            <value>
                <fullName>A Adesh Jadhav</fullName>
            </value>
            <value>
                <fullName>A Aditya Sankpal</fullName>
            </value>
            <value>
                <fullName>A Adnan Kazi</fullName>
            </value>
            <value>
                <fullName>A Ajay Bakhru</fullName>
            </value>
            <value>
                <fullName>A Ajay Gupta</fullName>
            </value>
            <value>
                <fullName>A Ajay Singh</fullName>
            </value>
            <value>
                <fullName>A Ajit Sond</fullName>
            </value>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Akash Misal</fullName>
            </value>
            <value>
                <fullName>A Akash Singh</fullName>
            </value>
            <value>
                <fullName>A Akhilesh Yadav</fullName>
            </value>
            <value>
                <fullName>A Akshay Bagul</fullName>
            </value>
            <value>
                <fullName>A Akshay Burkul</fullName>
            </value>
            <value>
                <fullName>A Akshay Kanojia</fullName>
            </value>
            <value>
                <fullName>A Alka Goswami</fullName>
            </value>
            <value>
                <fullName>A Alok Gupta</fullName>
            </value>
            <value>
                <fullName>A Altamesh Hawaldar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>