force-app/main/default/objects/Activity/fields/RW_Sourcing_Closing_Head__c.field-meta.xml
<CustomField>
    <fullName>RW_Sourcing_Closing_Head__c</fullName>
    <label>Del Sourcing/Closing Head</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Dsouza</fullName>
            </value>
            <value>
                <fullName>Braghu Paleja</fullName>
            </value>
            <value>
                <fullName>Chetan Pathare</fullName>
            </value>
            <value>
                <fullName>Karthik Chettiar</fullName>
            </value>
            <value>
                <fullName>Lucy Roychoudhary</fullName>
            </value>
            <value>
                <fullName>Nityanand Krishnan</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Rakesh Shah</fullName>
            </value>
            <value>
                <fullName>Rohit Gupta</fullName>
            </value>
            <value>
                <fullName>Sahil Bhatia</fullName>
            </value>
            <value>
                <fullName>Saurabh Deshmukh</fullName>
            </value>
            <value>
                <fullName>Saurabh Natu</fullName>
            </value>
            <value>
                <fullName>Umesh Barve</fullName>
            </value>
            <value>
                <fullName>Vickhil Thakkar</fullName>
            </value>
            <value>
                <fullName>Virat Vandre</fullName>
            </value>
            <value>
                <fullName>Brijesh Bharadwa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>