force-app/main/default/objects/Activity/fields/Sales_Reason_Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reason_Not_Interested__c</fullName>
    <label>Del Reason If Not Interested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already invested Elsewhere</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Buy Against Resale of Existing Property</fullName>
            </value>
            <value>
                <fullName>Consult Friends/Family/Financial Advisors</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Layout issue</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility</fullName>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
            <value>
                <fullName>Need More Time</fullName>
            </value>
            <value>
                <fullName>Need Time To Arrange OCR</fullName>
            </value>
            <value>
                <fullName>Not Responding</fullName>
            </value>
            <value>
                <fullName>OCR issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Seeker</fullName>
            </value>
            <value>
                <fullName>Shifting Out of Town</fullName>
            </value>
            <value>
                <fullName>Timelines Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>