force-app/main/default/objects/Activity/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Calls</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Demand Related</fullName>
            </value>
            <value>
                <fullName>Receipt Related</fullName>
            </value>
            <value>
                <fullName>Loan Related</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Interest Waiver Related</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Payments and Receipts</fullName>
            </value>
            <value>
                <fullName>Possession Related</fullName>
            </value>
            <value>
                <fullName>Cancellation &amp; Retention Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>