force-app/main/default/objects/Activity/fields/ShowWalkInSource__c.field-meta.xml
<CustomField>
    <fullName>ShowWalkInSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Del Show Walk In Source</label>
    <type>Checkbox</type>
</CustomField>