force-app/main/default/objects/Activity/fields/Source_of_enquiry__c.field-meta.xml
<CustomField>
    <fullName>Source_of_enquiry__c</fullName>
    <label>Del Source of enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>