force-app/main/default/objects/Activity/fields/Sub_Disposition_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Disposition_Type__c</fullName>
    <label>Del Call Status 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Disposition_Custom__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>(KHO snags highlighted / KHO failure)Dispute</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Bank Details Available</fullName>
            </value>
            <value>
                <fullName>Bank Details Not Available</fullName>
            </value>
            <value>
                <fullName>Banker Site Visit</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Beyond Grace Period (Credit)</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Cancellation Request (Vol Can)</fullName>
            </value>
            <value>
                <fullName>Challan Pick up</fullName>
            </value>
            <value>
                <fullName>Cheque Pick up</fullName>
            </value>
            <value>
                <fullName>Clarity on Agreement Clauses</fullName>
            </value>
            <value>
                <fullName>Company Significant</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Custoemr Agrees</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>DPAC Approval</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Executable version</fullName>
            </value>
            <value>
                <fullName>Floor Planning</fullName>
            </value>
            <value>
                <fullName>Hardcopy</fullName>
            </value>
            <value>
                <fullName>Hardcopy (Not on letter head) available</fullName>
            </value>
            <value>
                <fullName>Hardcopy (Not on letter head) unavailable</fullName>
            </value>
            <value>
                <fullName>Hardcopy available</fullName>
            </value>
            <value>
                <fullName>Hardcopy unavailable</fullName>
            </value>
            <value>
                <fullName>Incorrect Entry</fullName>
            </value>
            <value>
                <fullName>Incorrect ROC/Amendment</fullName>
            </value>
            <value>
                <fullName>JR Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>