force-app/main/default/objects/Activity/fields/Sub_source_of_enquiry__c.field-meta.xml
<CustomField>
    <fullName>Sub_source_of_enquiry__c</fullName>
    <label>Del Sub source of enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>