force-app/main/default/objects/Activity/fields/Task_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_Date__c</fullName>
    <description>This field is used in flow to send notifications, which returns date value of createddate.</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Created Date</label>
    <type>Date</type>
</CustomField>