force-app/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry Received</fullName>
            </value>
            <value>
                <fullName>Presales Call</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>CRM Call</fullName>
            </value>
            <value>
                <fullName>Collection Call</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Home Loan Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>