force-app/main/default/objects/Activity/fields/Team_Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Team_Attended_By__c</fullName>
    <label>Team Attended By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>