force-app/main/default/objects/Activity/fields/Time_Line__c.field-meta.xml
<CustomField>
    <fullName>Time_Line__c</fullName>
    <label>Time Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possession</valueSetName>
    </valueSet>
</CustomField>