force-app/main/default/objects/Activity/fields/Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding__c</fullName>
    <formula>Demand__r.Remaining_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>