force-app/main/default/objects/Activity/fields/Type_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Payment__c</fullName>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>