force-app/main/default/objects/Activity/fields/Unreachable_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Unreachable_Reasons__c</fullName>
    <label>Unreachable Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Collection_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal to provide reasons list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>