force-app/main/default/objects/Activity/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>Del UTM Campaign</label>
    <type>TextArea</type>
</CustomField>