force-app/main/default/objects/Activity/fields/UTM_Display__c.field-meta.xml
<CustomField>
    <fullName>UTM_Display__c</fullName>
    <label>Del_Ad Group</label>
    <type>TextArea</type>
</CustomField>