force-app/main/default/objects/Activity/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>Del UTM Medium</label>
    <type>TextArea</type>
</CustomField>