force-app/main/default/objects/Activity/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>Del UTM Source</label>
    <type>TextArea</type>
</CustomField>