force-app/main/default/objects/Activity/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>Del_Placement</label>
    <type>TextArea</type>
</CustomField>