force-app/main/default/objects/Activity/fields/Vaastu_Entry_Towards__c.field-meta.xml
<CustomField>
    <fullName>Vaastu_Entry_Towards__c</fullName>
    <label>Del_Vaastu (Entry Towards)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>