force-app/main/default/objects/Activity/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <formula>DATEVALUE(Call_Proposed_date_of_visit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>