force-app/main/default/objects/Activity/fields/Visited_With__c.field-meta.xml
<CustomField>
    <fullName>Visited_With__c</fullName>
    <label>Del_Visited With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Family (pax2)</fullName>
            </value>
            <value>
                <fullName>Family (pax3)</fullName>
            </value>
            <value>
                <fullName>Family (pax4)</fullName>
            </value>
            <value>
                <fullName>Family (pax4+)</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Onbehalf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>