force-app/main/default/objects/Activity/fields/Voice_Log_URL__c.field-meta.xml
<CustomField>
    <fullName>Voice_Log_URL__c</fullName>
    <label>Del_Voice_Log_URL</label>
    <type>Url</type>
</CustomField>