force-app/main/default/objects/Activity/fields/Walk_in_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Sub_Source__c</fullName>
    <label>Del_Walk-in Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Walk_in_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99 acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Different Areas</fullName>
            </value>
            <value>
                <fullName>Newspaper Names</fullName>
            </value>
            <value>
                <fullName>Different Dates</fullName>
            </value>
            <value>
                <fullName>Client Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Exhibition Names</fullName>
            </value>
            <value>
                <fullName>Different Projects</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Whatsapp_Chatbot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>