force-app/main/default/objects/Activity/fields/Web_Banner_Size__c.field-meta.xml
<CustomField>
    <fullName>Web_Banner_Size__c</fullName>
    <label>Del_Web Banner Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>