force-app/main/default/objects/Activity/fields/Web_Banner_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Banner_Source__c</fullName>
    <label>Del_Web Banner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>