force-app/main/default/objects/Activity/fields/With_Servant_Room__c.field-meta.xml
<CustomField>
    <fullName>With_Servant_Room__c</fullName>
    <label>Del_With Servant Room</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>